--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-python.python",
         "esbenp.prettier-vscode",
-        "codezombiech.gitignore"
+        "codezombiech.gitignore",
+        "charliermarsh.ruff"
     ]
 }
